--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,5 @@
+/*generali*/
+
 *{
     padding: 0;
     margin: 0;
@@ -9,16 +11,10 @@ html {
 
 .flex {
     display: flex;
-    justify-content:flex-end;
     align-items: center;
     padding: 5px;
+    justify-content:flex-end;
 }
-
-#p {
-    color: white;
-    margin-left: 5px;
-}
-
 
 .conteiner {
     width: 100vw;
@@ -28,14 +24,53 @@ html {
     top: 0;
 }
 
-.view {
+.conteiner-2 {
     border: solid 1px black;
+    width: 90vw;
+    height: 1000px;
+    background-color: rgb(209, 221, 44);
+    margin: auto;
+    margin-top: 100px;
+}
+
+i {
+    color: white;
+}
+
+#p {
+    color: white;
+    margin-left: 5px;
+}
+
+
+.view {
     border-radius:3px;
     background-color: gray;
-    margin-right: 10px;
+    margin-right: 20px;
     height: 30px;
 }
 
-.view i {
-    color: white;
+/*main*/
+
+.flex-1 {
+    display: flex;
 }
+
+.item {
+    background-image: url(https://picsum.photos/200);
+    background-size: cover;
+    border: solid 1px black;
+    width: 300px;
+    height: 200px;
+    margin: 2px 2px;
+}
+
+.pinco {
+    background-color: gray;
+    height: 30px;
+    width: 120px;
+    align-self: flex-end;
+    align-items: center;
+
+}
+
