--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,7 +44,7 @@ i {
 
 .view {
     border-radius:5px;
-    background-color: gray;
+    background-color: rgb(56, 55, 55);
     margin-right: 20px;
     height: 30px;
 }
@@ -94,6 +94,11 @@ i {
     justify-content: space-between;
 }
 
+.box {
+    margin-left: 10px;
+    align-items: center;
+}
+
 .nav-flex {
     display: flex;
 }
@@ -105,14 +110,31 @@ i {
 
 .box p {
     color: white;
+    margin-top: 8px;
+    font-size: 10px;
 }
 
-.rigth {
+.up {
+    font-size: 10px;
+    margin-top: 15px;
+}
+
+.i {
+     font-size: 20px;
+}
+
+.green {
+    font-size: 20px;
+    color: rgb(127, 200, 17);
+}
+
+.right {
     padding: 0px 10px;
     border: solid 1px black;
     height: 80px;
     align-items: center;
     background-color: rgb(56, 55, 55);
+    margin-right: 18px;
 }
 
 
